# LLM-Sustainability-Rater

./: .gitignore  README.md  pyproject.toml  read_code_green_measurement.ipynb  requirements.txt  run_log_perflogs.txt
RQ_experiments/: utils.py
RQ_experiments/RQ1/: generate_rq1.py
RQ_experiments/RQ1/report/: rq1_table.tex  rq1_table.xlsx
RQ_experiments/RQ2/: analyze_rq2.py  generate_rq2.py  generate_rq2_evolution.py
RQ_experiments/RQ2/report/: rq2_evolution_analysis.txt  rq2_evolution_ratings.xlsx  rq2_table.tex  rq2_table.xlsx
RQ_experiments/RQ3/: analyze_rq3.py  generate_rq3.py
RQ_experiments/RQ3/report/: rq3_analysis.txt  rq3_weight_ratings.xlsx
RQ_experiments/RQ4/: analyze_rq4.py  generate_rq4.py
RQ_experiments/RQ4/report/: rq4_analysis.txt  rq4_table.xlsx
RQ_experiments/RQ_old/: RQ1.ipynb  all_results.xlsx  validation.ipynb
RQs_implementation/Motivation/: motivation.ipynb
RQs_implementation/RQ1/: RQ1.ipynb  acc_ene_dur_ratio.xlsx  all_results.xlsx
RQs_implementation/RQ2/: RQ2.ipynb  all_results.xlsx  code2text_python_rating.xlsx  livecodebench_rating.xlsx  oter_parameter_analysis.xlsx  oter_sensitivity_results.csv  oter_sensitivity_summary.csv  validation.ipynb
llm_labeling/: RQ2.ipynb  code2text_python_rating.xlsx  livecodebench_rating.xlsx  new_notebook.ipynb  rating_llms.ipynb  splines.py
lm_eval/: __main__.py  configs.py  download_models.py  evaluator.py  falcon_run.txt  main_run.py  run_config.yaml  run_log.txt  utils.py
lm_eval/api/: task.py
lm_eval/console_run_logs/: falcon_code2txt.txt  run_log copy.txt  run_log.txt  run_log2.txt  run_log_cclogs.txt  run_log_perflogs.txt
lm_eval/models/: hf_vlms.py  huggingface.py
lm_eval/rating_llms/: base_size_rating.py  cic.py  circ.py  ote.py  oter.py  size_acc.py  size_ene.py  utils.py  validation.py  validation_scaling.py
lm_eval/rating_llms/methods/: base_size_rating.py  circ.py  oter.py  size_acc.py  size_ene.py
lm_eval/rating_llms/utils/: utils.py
lm_eval/rating_llms/validation/: rating_stability.py  validation_base.py  validation_incremental.py  validation_scaling.py  validation_weighted.py
lm_eval/results/: falcon_experimental_results.jsonl  final_results.jsonl  final_results_codegreen.jsonl  partial_results_codegreen_.jsonl  results.jsonl  second_run.jsonl
lm_eval/tasks/LiveCodeBench/: LiveCodeBench.yaml  testing_utils.py  utils.py
lm_eval/tasks/code_x_glue/code-text/: python.yaml  utils.py
